--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^3.8",
+        "pestphp/pest-plugin-drift": "^3.0",
         "rector/rector": "^2.0"
     },
     "autoload": {
