--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^3.8",
         "pestphp/pest-plugin-drift": "^3.0",
+        "pestphp/pest-plugin-faker": "^3.0",
         "pestphp/pest-plugin-laravel": "^3.2",
         "rector/rector": "^2.0"
     },
