chore(tooling): add type coverage pest plugin

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "pestphp/pest-plugin-drift": "^3.0",
         "pestphp/pest-plugin-faker": "^3.0",
         "pestphp/pest-plugin-laravel": "^3.2",
+        "pestphp/pest-plugin-type-coverage": "^3.5",
         "rector/rector": "^2.0"
     },
     "autoload": {
